# economy

./: .gitignore  Arithmetics.hs  Economy.hs  Main.hs  Makefile  Month.hs  README.md  arithmetics.hs  economy.cabal  economy.hs  example.json  stack.yaml  test.json
src/: Main.hs  Month.hs
