name:                economy
version:             0.1.0.0
homepage:            https://github.com/rootmos/economy#readme
license:             GPL-3
license-file:        LICENSE
author:              Gustav Behm
maintainer:          
copyright:           2016, 2018 Gustav Behm
category:            Utility
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable economy
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Arithmetics, Economy, Month
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , optparse-applicative
                     , aeson
                     , boxes
                     , parsec
                     , scientific
                     , text
                     , time
                     , bytestring
                     , filepath
                     , directory
